[package]
name = "vectune"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ClankPan <clankpan24cm@gmail.com>"]
description = "A lightweight VectorDB with Incremental Indexing, based on FreshVamana."
keywords = ["FreshVamana", "VectorDataBase", "IncrementalIndexing", "LightWeight", "DisckANN"]
categories = ["data-structures", "database", "mathematics"]
repository = "https://github.com/ClankPan/vectune"
readme = "README.md"

[dependencies]
itertools = "=0.12.1"
parking_lot = {version = "=0.11.2", features = []} # 0.12にすると、wasm-bindgenのfeatがなくなってしまう。
rand = { version = "=0.8.5", features = ["small_rng"] }
rayon = "=1.10.0"
rustc-hash = "=1.1.0"
serde = { version = "=1.0.204", features = ["derive"] }
serde_json = "=1.0.113"
getrandom = { version = "=0.2.14", optional = true }
indicatif = { version = "=0.17.8", optional = true }
dashmap = "=5.5.3"
bit-vec = "=0.6.3"
ic-cdk = "=0.16.0"

memmap2 = "=0.9.4"
anyhow = "=1.0.86"
bytesize = "=1.3.0"
bytemuck = "=1.16.2"
bincode = "=1.3.3"

log = "0.4.22"

[dev-dependencies]
rand = { version = "=0.8.5", features = ["small_rng"] }
serde = { version = "=1.0.204", features = ["derive"] }
serde_json = "=1.0.113"
byteorder = "=1.5.0"
indicatif = "=0.17.8"
env_logger = "0.11.6"

[features]
wasm32-unkown-unknown = ["getrandom/custom"]
progress-bar = ["indicatif"]
wasm-bindgen = ["parking_lot/wasm-bindgen"]
